# dof_utilities

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: release.yml
dof_utils/: __init__.py  extract_juzgadores.py  pdf_table_extractor.py
