[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dof_utils"]

[project]
name = "dof-utilities"
version = "0.1.0"
description = "Utilities for extracting data from DOF (Diario Oficial de la Federación) PDF files"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Equipo Juzgadores", email = "contacto@juzgadores.org" }]
keywords = ["pdf", "table-extraction", "dof"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["pdfplumber", "pandas", "rich"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line-length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini-options]
minversion = "6.0"
addopts = "-ra -q --cov=dof_utils"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py313"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]
